--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
+#certs
+*.pem
+
+# OS X files
+.history
+.DS_Store
+
+# ignore bak files
+*_bak
+
+# hid ssh keys if any
+.ssh/
+*rsa
+*.pub
+
 # Local .terraform directories
 **/.terraform/*
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+*tfstate*
+.terraform
 
 # Crash log files
 crash.log
@@ -13,6 +30,10 @@ crash.log
 # version control.
 #
 # example.tfvars
+*.tfvars
+*.tfvars*
+*tfvars*
+**/*tfvars/
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -24,6 +45,4 @@ override.tf.json
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+#
